# connect-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: __init__.py
agents/concierge/: README.md  __init__.py  config.example.env  escalate_tool_schema.json  orchestration_prompt.yaml  setup_agent.py
docs/: 01-landscape-and-decisions.md  02-architecture-reference.md  03-canada-compliance-regions.md
infra/: README.md
infra/environments/dev/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/modules/agentcore_gateway/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/connect_foundation/: main.tf  outputs.tf  variables.tf
infra/modules/contact_flow/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/contact_flow/scripts/: export_flow.sh
infra/modules/contact_flow/templates/: sample_welcome.json.tftpl
infra/modules/lex_bot/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/tool_backend/: main.tf  outputs.tf  variables.tf
infra/modules/tool_backend/src/: handler.py
shared/: __init__.py
shared/mcp/: README.md  __init__.py  deploy.sh  requirements.txt  wealth_mcp_server.py  wealth_tools.py
tests/: README.md  conftest.py  connect_simulation_cases.py  test_wealth_tools.py
