[project]
name = "connect-agents"
version = "0.1.0"
description = "Research repo for building AI agents in Amazon Connect (concierge + multi-agent)"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
